# new_staff_train_newmaker26

./: .gitignore  CMakeLists.txt  FINAL_PROJECT_VERIFY_REPORT.md  README.md  SerialPort.cpp  TASK_REPORT.md  TASK_REPORT_BUILD_TEST.md  TASK_REPORT_BUILD_VERIFY.md  TASK_REPORT_GIT_HISTORY_CLEAN.md  VisionController.cpp  main.cpp  packet.hpp  readme.md
2.01/: CMakeLists.txt
2.01/include/: RobotVision.hpp  SerialPort.hpp  VisionController.hpp  Visualization.hpp
2.01/src/: MindVisionCamera.cpp  main.cpp  test_recognition.cpp
2.02/: CMakeLists.txt
2.02/include/: MindVisionCamera.hpp  packet.hpp
2.02/src/: RobotVision.cpp  SerialPort.cpp  VisionController.cpp  Visualization.cpp  main.cpp  test_recognition.cpp
bean_sorting_framework/: CMakeLists.txt  main.cpp
bean_sorting_framework/Camera/log/: warning_20260721-100241.4104
bean_sorting_framework/CameraDriver/: MvCamera.cpp  MvCamera.h
bean_sorting_framework/Communication/: BeanProtocol.h  BeanSerial.cpp  BeanSerial.h  ByteConverter.cpp  CRC16.hpp
bean_sorting_framework/Detector/: BeanDetector.cpp  BeanDetector.h
bean_sorting_framework/config/: bean_sorting.yaml
bean_sorting_framework/scripts/: fix_network.sh  players.conf  setup_autostart.sh  vision_daemon.sh  指令
bean_sorting_framework/test/: test_detector.cpp
bean_vision_framework/: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TASK_REPORT_BRANCH_CLEANUP2.md  TASK_REPORT_GIT_BRANCH1.md  agent.md
bean_vision_framework/bisai/: CLAUDE.md.md  CMakeLists.txt  main.cpp
bean_vision_framework/bisai/bean_digit_v1_verified_20260624/: README.md  classes.txt
bean_vision_framework/config/: app.yaml  app_linux_test.yaml  camera_preview_demo.yaml  camera_yolo_preview.yaml  classes.yaml  debug_camera_mock.yaml  debug_command_image.yaml  debug_image_real_serial.yaml  real_robot.yaml  roi_current_backup.yaml  roi_single_view_4.yaml  roi_view_1.yaml  roi_view_2.yaml  roi_view_3.yaml  serial.yaml
bean_vision_framework/docs/: ARCHITECTURE.md  BUILD_AND_RUN.md  CAMERA_SYSTEM.md  CONFIG_REFERENCE.md  C板_NUC视觉串口联调总结文档.md  DEBUG_GUIDE.md  NUC部署指南.md  README.md  VISION_CONTROL_PROTOCOL.md  串口协议_核心协议.md  串口协议_算法端.md  串口协议说明.md  文件映射表.md  文档导航.md  系统架构与数据流.md  运行模式与主程序说明.md
bean_vision_framework/docs/camera/: CAMERA_SYSTEM.md
bean_vision_framework/docs/debug/: SERIAL_TEST_CHECKLIST.md  调试与排障指南.md
bean_vision_framework/docs/deployment/: DEPLOYMENT.md  NUC部署指南.md  Ubuntu迁移与开发交接.md
bean_vision_framework/docs/design/: SERIAL_STABILITY_DESIGN.md  VISION_PIPELINE_DESIGN.md
bean_vision_framework/docs/history/: REAL_ROBOT_PIPELINE_PHASE_SUMMARY.md  REFACTOR_RECOGNITION_RUNNER_PHASE4.md  SERIAL_COMMUNICATION_PHASE1.md  SERIAL_COMMUNICATION_STAGE_SUMMARY.md  serial_protocol阶段性.md  视觉联调阶段性总结.md
bean_vision_framework/docs/protocol/: 串口协议_电控端.md
bean_vision_framework/docs/reference/: 文件映射表.md
bean_vision_framework/docs/runtime/: RUN_COMMANDS.md  运行模式与主程序说明.md
bean_vision_framework/include/camera/: CameraManager.h
bean_vision_framework/include/command/: CommandSource.h  SerialCommandSource.h  TerminalCommandSource.h
bean_vision_framework/include/communication/: ByteConverter.h  CRC16.h  Protocol.h  SerialPort.h
bean_vision_framework/include/core/: AppConfig.h  DetectionTypes.h  TaskTypes.h  VisionResult.h
bean_vision_framework/include/detector/: BeanNumberDetector.h
bean_vision_framework/include/input/: InputManager.h
bean_vision_framework/include/parser/: RoiParser.h
bean_vision_framework/include/recognition/: MultiFrameRecognitionRunner.h  MultiFrameRecognizer.h  RecognitionRunner.h  SingleFrameRecognitionRunner.h
bean_vision_framework/include/task/: BeanInference.h  DigitInference.h  TaskGenerator.h  TaskStateMachine.h  VisionMemory.h
bean_vision_framework/include/utils/: DebugLogger.h  DrawUtils.h  LogUtils.h
bean_vision_framework/scripts/: run_camera_preview.sh  run_debug_image_real_serial.sh  run_demo.sh  run_real_robot.sh  run_serial_debug.sh  run_serial_protocol_demo.sh
bean_vision_framework/src/: main.cpp
bean_vision_framework/src/camera/: CameraManager.cpp
bean_vision_framework/src/command/: SerialCommandSource.cpp  TerminalCommandSource.cpp
bean_vision_framework/src/communication/: ByteConverter.cpp  CRC16.cpp  Protocol.cpp  SerialPort.cpp
bean_vision_framework/src/core/: AppConfig.cpp  DetectionTypes.cpp
bean_vision_framework/src/detector/: BeanNumberDetector.cpp
bean_vision_framework/src/input/: InputManager.cpp
bean_vision_framework/src/parser/: RoiParser.cpp
bean_vision_framework/src/recognition/: MultiFrameRecognitionRunner.cpp  MultiFrameRecognizer.cpp  SingleFrameRecognitionRunner.cpp
bean_vision_framework/src/task/: BeanInference.cpp  DigitInference.cpp  TaskGenerator.cpp  TaskStateMachine.cpp  VisionMemory.cpp
bean_vision_framework/src/utils/: DebugLogger.cpp  (+2 more)
mvs.2/: .gitignore  CMakeLists.txt  main.cpp
mvs_openvino_demo/: CMakeLists.txt  README.md  build.sh  main.cpp
mvs_openvino_demo/src/: detector.cpp  detector.hpp
robot_vision_1.10.1/: CMakeLists.txt
robot_vision_1.10.1/include/: RobotVision.hpp  SerialPort.hpp  VisionController.hpp
robot_vision_1.10.1/src/: VisionController.cpp
robot_vision_1.10.2/: CMakeLists.txt
robot_vision_1.10.2/include/: RobotVision.hpp  VisionController.hpp
robot_vision_1.10.2/src/: MindVisionCamera.cpp  RobotVision.cpp  VisionController.cpp  main.cpp
robot_vision_1.14.2/: CMakeLists.txt
robot_vision_1.14.2/include/: SerialPort.hpp
robot_vision_1.14.2/src/: SerialPort.cpp  VisionController.cpp  test_recognition.cpp
robot_vision_1.15.1/: CMakeLists.txt
robot_vision_1.15.1/include/: VisionController.hpp
robot_vision_1.15.1/src/: MindVisionCamera.cpp  RobotVision.cpp  VisionController.cpp  Visualization.cpp  main.cpp  test_recognition.cpp
zst/: .gitignore  CMakeLists.txt  README.md  bean_svm.yml  main.cpp
zst/config/: vision.yaml
zst/scripts/: install_autostart.sh  run_competition_debug.sh  setup_autostart.sh  start_vision.sh  uninstall_autostart.sh  vision_daemon.sh  开机自启动说明.txt
虚拟串口协议8.1/: CMakeLists.txt
虚拟串口协议8.1/src/: SerialPort.h
(+243 files in other folders)
